unpackaged/main/default/objects/Brand_Country_Allocation__c/Brand_Country_Allocation__c.object-meta.xml
<CustomObject>
    <description>PS-MC-SB-11 This object is used to add allocations on country for single barrel 2.</description>
    <label>Country Level Allocation</label>
    <nameField>
        <label>Country Level Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Level Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>