unpackaged/main/default/objects/Brand_Country_Allocation__c/fields/Allocations_Per_Interval__c.field-meta.xml
<CustomField>
    <fullName>Allocations_Per_Interval__c</fullName>
    <description>PS-MC-SB-11 to manage allocations provided for this time interval</description>
    <label>Allocations Per Interval</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>