unpackaged/main/default/objects/Brand_Country_Allocation__c/fields/Carry_Forward_Units__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Units__c</fullName>
    <description>PS-MC-SB-11 to manage carry forwarded barrels for this time interval</description>
    <label>Carry Forward Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>