unpackaged/main/default/objects/Brand_Country_Allocation__c/fields/Is_Leaf_Node__c.field-meta.xml
<CustomField>
    <fullName>Is_Leaf_Node__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PS-MC-SB-11 It is used to make allocation to be defined on current record hence it's child cannot have allocations</description>
    <inlineHelpText>Making it mark won't allow it's children to have allocations</inlineHelpText>
    <label>Is Leaf Node</label>
    <type>Checkbox</type>
</CustomField>